Add some featuers

--- a/whatsapp/src/Component/main/sideBar/contactSearch/contactSearch.css
+++ b/whatsapp/src/Component/main/sideBar/contactSearch/contactSearch.css
@@ -1,3 +1,9 @@
 #contactSearch {
     padding: 10px;
+    background-color: #F6F6F6
+}
+
+#contactSearch .input-group input{
+    border-radius: 20px !important;
+    border: none;
 }
