--- a/whatsapp/src/Component/main/sideBar/contactSearch/contactSearch.css
+++ b/whatsapp/src/Component/main/sideBar/contactSearch/contactSearch.css
@@ -1,9 +1,18 @@
 #contactSearch {
-    padding: 10px;
-    background-color: #F6F6F6
+  padding: 10px;
+  background-color: #f6f6f6;
 }
 
-#contactSearch .input-group input{
-    border-radius: 20px !important;
-    border: none;
+#contactSearch .input-group input {
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
+  border: none;
 }
+
+#contactSearch .input-group-text {
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
+  border: none;
+  background-color: white;
+}
+
