--- a/whatsapp/src/Component/main/sideBar/sidebar.css
+++ b/whatsapp/src/Component/main/sideBar/sidebar.css
@@ -1,4 +1,7 @@
 #sidebar {
-    background-color: rgb(248, 248, 248);
-    height:100vh
+  background-color: #fbfbfb;
+  height: 100vh;
+  max-width: 400px;
+  min-width: 300px;
+  border-right: 1px solid rgba(216, 216, 216, 0.541);
 }
