--- a/whatsapp/src/Component/login/login.css
+++ b/whatsapp/src/Component/login/login.css
@@ -15,3 +15,22 @@
 .margin {
 	margin-left: 400px;
 }
+
+#login .row {
+	flex-direction: column;
+	align-items: center;
+	margin-top: 100px;
+}
+
+#login #logo {
+	padding: 30px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+#login img {
+	width: 150px;
+}
+
